compiler/tests/success/x86-64/test_move_ptr_to_stack.jazz
export fn foo() -> reg u64 {
  reg ptr u64[2] p;
  stack u64[2] s, s1;
  reg u64 r;
  inline int i;
  p = s;
  for i = 0 to 2 {
    p[i] = (64u)i;
  }
  s1 = p; 
  r = 0;
  for i = 0 to 2 {
    r += s1[i];
  }
  return r;
}


