compiler/tests/fail/stack_allocation/x86-64/write_constant_pointer_arg.jazz
export fn foo (reg ptr u64[4] p) -> reg u64 {
  reg u64 r;
  reg ptr u64[4] s;
  s = p;
  s[0] = 1;
  r = s[0];
  return r;
}
